# Agentic-AI

RAG/Web RAG/: README.md  pyproject.toml  test.ipynb
RAG/Web RAG/app/: chain.py  server.py
openai_prompter/: Prompter.txt  README.md  pyproject.toml  requirements.txt  test.ipynb
openai_prompter/app/: chain.py  server.py
